--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: row; /* Ajuste para poner secciones lado a lado */
+            flex-direction: row; /* Secciones lado a lado */
             min-height: 100vh;
+            position: relative;
         }
         h1, h2 {
             color: #f5d042; /* Dorado */
@@ -35,6 +36,14 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+        }
+        /* Estilo del logo */
+        .logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 100px; /* Tamaño del logo */
+            height: auto;
         }
         /* Caja para títulos con borde dorado */
         .title-box {
@@ -130,6 +139,10 @@
     </style>
 </head>
 <body>
+
+    <!-- Agregar el logo en la esquina superior izquierda -->
+    <img src="logo.jpg" alt="Logo" class="logo">
+
     <!-- Sección de portlets a la izquierda -->
     <div class="portlets">
         <div class="title-box">
